<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings1"
        android:title="@string/posicionGlobal"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings2"
        android:title="@string/movimientos"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings3"
        android:title="@string/transferencias"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings4"
        android:title="@string/cambiarContraseña"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings5"
        android:title="@string/promociones"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings6"
        android:title="@string/configuracion"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings7"
        android:title="@string/salir"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
