<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePassActivity">

    <TextView
        android:id="@+id/Login"
        android:layout_width="380dp"
        android:layout_height="89dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/cambiarContraseña"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/purple_700"
        android:textSize="100px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/passwordActual"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="373dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text=""
        android:hint="@string/contraseñaActual"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4E4E4E"
        android:textSize="60px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/passwordActual3"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="373dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text=""
        android:hint="@string/cambiarContraseña"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4E4E4E"
        android:textSize="60px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/passwordActual2"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="373dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text=""
        android:hint="@string/repetirContraseña"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4E4E4E"
        android:textSize="60px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="143dp"
        android:layout_height="74dp"
        android:text="@string/guardar"
        android:textSize="50px"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/purple_700"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

</androidx.constraintlayout.widget.ConstraintLayout>